# graphoid

./: .coverage  .gitignore  CLAUDE.md  Cargo.toml  DOCUMENTATION_UPDATE_SUMMARY.md  LICENSE  Makefile  PRIMARY_ROADMAP.md  README.md  SESSION_NOTES.md
python/: pyproject.toml
python/data/: bitcoin_prices_http.csv
python/dev_docs/: BINARY_DATA_ENHANCEMENT_PLAN.md  BUG_FIXES_SUMMARY_2025_01.md  DATAFRAME_NEXT_STEPS.md  ENHANCED_BEHAVIOR_SYSTEM_SPEC.md  ENHANCED_ERROR_HANDLING_IMPLEMENTATION.md  FILE_HANDLES_AND_GRAPH_BOUNDARIES.md  GLANG_DATA_ANALYTICS_OBSERVATIONS.md  GLANG_LANGUAGE_COMPARISON.md  LOAD_VS_IMPORT_DESIGN.md  OPERATOR_SEPARATION_SUMMARY.md  PRIMARY_ROADMAP_OLD.md  PYTHON_MODULE_ELIMINATION_REALITY_CHECK.md  RUST_MIGRATION_PLAN.md  SESSION_PROGRESS.md
python/docs/: dataframes_as_graphs.md  metadata_layer.md  sql_module.md
python/docs/builtins/: boolean_methods.md  data_node_methods.md
python/docs/language_features/: configuration_blocks.md
python/docs/modules/: csv.md  json.md  random.md
python/samples/: behaviors_demo.gr  bitcoin_tracker_enhanced.gr  configuration_demo.gr  csv_demo_glang.gr  dataframe_demo.gr  dataframe_lambda_demo.gr  greet.gr  io_demo.gr  json_final_demo.gr  pure_glang_capabilities.gr  simple.gr  string_manipulation_demo.gr  test_comprehensive_functions.gr  test_dataframe_groupby_integration.gr  test_dataframe_lambda_features.gr  test_func.gr  test_lambda_as_parameters.gr  test_starts_with.gr  test_updated_dataframe.gr  test_variable_keys.gr  test_variable_keys_simple.gr  visualization_demo.gr
python/stdlib/: benchmark.gr  csv.gr  random.gr
python/test/: DISABLED_TESTS_README.md  test_ast_executor.py  test_binary_tree.py  test_call_graph_visualization.py  test_comment_parsing.py  test_dot_operators.py  test_function_value_extended.py  test_functional_type_inference.py  test_generic_mapping_behavior.py  test_http_module.py  test_import_statement.py  test_io_module.py  test_list_graph_operations.py  test_metadata_layer.py  test_method_call_parentheses.py  test_module_function_scoping.py  test_module_namespace.py  test_network_glang_module.py  test_program_imports.py  test_semantic_pipeline.py  test_tokenizer_v2.py  test_type_casting.py
python/tools/: self_hosting_metrics.gr
rust/: Cargo.toml  PHASE_10_COMPLETION_SUMMARY.md  PHASE_6_5_VERIFICATION_REPORT.md  PHASE_6_ASSESSMENT.md  README.md  REFACTOR_PLAN_OPTION_A.md  SESSION_END_SUMMARY.md  SESSION_SUMMARY.md  SESSION_SUMMARY.txt  START_HERE_NEXT_SESSION.md  STATUS.md  STRING_METHODS_IMPLEMENTATION_PLAN.md  TREE_RULESET_DESIGN.md
rust/dev_docs/: FUNCTION_AUDIT_RESULTS.md  IMPLEMENTATION_STATUS.md  PHASE_6_5_FINAL_SUMMARY.md  PHASE_6_5_VERIFICATION_REPORT.md  PHASE_7_API_UNIFICATION_COMPLETE.md  PHASE_9_DETAILED_PLAN.md  RULESET_TODO.md  SESSION_NOTES.md  SESSION_SUMMARY.md  START_HERE_NEXT_SESSION.md  UNIFICATION_PLAN.md
rust/docs/: examples-guide.md
rust/docs/features/: module-system.md  subgraph-operations.md
rust/examples/: README.md  behaviors.gr  collections.gr  database_module.gr  functions.gr  graphs.gr  hello_world.gr  modules_math.gr  pattern_matching.gr  priv_keyword.gr  property_projection.gr  recommendation_system.gr  service_module.gr  social_network_patterns.gr  subgraph_operations.gr  variable_length_paths.gr
rust/samples/: README.md  approx_demo.gr  bignum_basics.gr  collections_demo.gr  constants.gr  crypto_examples.gr  crypto_sha256.gr  function_overloading.gr  high_precision.gr  large_integer_arithmetic.gr  load_vs_import.gr  mixed_operations.gr  modules_basic.gr  modules_main.gr  multi_file_project.gr  number_methods.gr  property_projection.gr  random.gr  sha256_demo.gr  statistics_demo.gr  string_generators.gr  string_mutating_methods.gr  string_pattern_methods_simple.gr  test_bignum_simple.gr
rust/samples/01-basics/: collections.gr
rust/samples/02-intermediate/: bitwise_operations.gr  string_pattern_methods.gr  universal_casting.gr
rust/samples/03-advanced/: recommendation_system.gr  variable_length_paths.gr
rust/samples/04-modules/: load_vs_import.gr
rust/src/: error.rs  lib.rs  main.rs
rust/src/ast/: mod.rs
rust/src/execution/: config.rs  environment.rs  error_collector.rs  executor.rs  function_graph.rs  mod.rs  module_manager.rs  pattern_matcher.rs
rust/src/graph/: behaviors.rs  mod.rs  rules.rs  rulesets.rs
rust/src/lexer/: mod.rs  token.rs
rust/src/parser/: mod.rs
rust/src/stdlib/: crypto.rs  fs.rs  mod.rs
rust/src/values/: graph.rs  hash.rs  list.rs  mod.rs  tree.rs
rust/stdlib/: json.gr  math.gr  string.gr  time.gr
rust/test_data/modules/: simple_module.gr
rust/tests/: advanced_functions_tests.rs  architecture_verification_tests.rs  collection_methods_tests.rs  element_wise_tests.rs  example_files_tests.rs  filter_based_subgraph_tests.rs  function_graph_tests.rs  graph_pattern_matching_tests.rs  graph_querying_tests.rs  inline_conditional_tests.rs  integer_division_tests.rs  integration_tests.rs  lambda_block_tests.rs  list_rules_graphoid_syntax_test.rs  load_statement_tests.rs  module_import_tests.rs  multi_file_project_tests.rs  mutation_convention_tests.rs  pattern_matching_e2e_tests.rs  pattern_matching_integration.rs  pattern_objects_tests.rs  rest_pattern_tests.rs  run_integration_tests.gr  stdlib_imports_tests.rs  trailing_block_tests.rs  unit_tests.rs
rust/tests/integration/: 01_print.gr  http_module_test.gr  json_module_test.gr  os_test.gr  regex_enhanced_test.gr  regex_module_test.gr  string_index_test.gr  test_32bit_directive.gr  test_32bit_verify.gr  test_json_comprehensive.gr  time_test.gr
rust/tests/unit/: ad_hoc_rule_tests.rs  algorithm_tests.rs  auto_index_tests.rs  behavior_framework_tests.rs  bignum_tests.rs  bitwise_tests.rs  bst_ordering_tests.rs  bug_fix_tests.rs  config_tests.rs  custom_conditional_behaviors_tests.rs  environment_tests.rs  error_collector_tests.rs  exec_tests.rs  executor_tests.rs  explain_tests.rs  freeze_behaviors_tests.rs  fs_list_dir_tests.rs  function_graph_unit_tests.rs  graph_pattern_execution_tests.rs  graph_rules_tests.rs  graph_tests.rs  lexer_tests.rs  mod.rs  (+18 more)
(+972 files in other folders)
