[package]
name = "graphoid"
version = "0.1.0"
edition = "2021"
authors = ["Irv Kalb"]
description = "Graphoid/Glang: A graph-theoretic programming language"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
thiserror = "1.0"        # Error handling
lazy_static = "1.4"      # Global state

# Random number generation
rand = "0.8"
rand_distr = "0.4"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }

# Cryptography
sha2 = { version = "0.10", features = ["oid"] }  # SHA-256, SHA-512 (oid for RSA verification)
sha1 = "0.10"              # SHA-1 (legacy, deprecated)
md-5 = "0.10"              # MD5 (legacy, deprecated)
blake2 = "0.10"            # BLAKE2b hashing
blake3 = "1.5"             # BLAKE3 hashing (fastest)
ed25519-dalek = "2.0"      # Ed25519 signatures
aes-gcm = "0.10"           # AES-256-GCM encryption
chacha20poly1305 = "0.10"  # ChaCha20-Poly1305 encryption
pbkdf2 = { version = "0.12", features = ["simple"] }  # PBKDF2 key derivation
argon2 = "0.5"             # Argon2 key derivation
hmac = "0.12"              # HMAC message authentication
base64 = "0.21"            # Base64 encoding
hex = "0.4"                # Hex encoding

# TLS crypto primitives (for pure Graphoid TLS implementation)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }  # X25519 key exchange (ECDHE)
hkdf = "0.12"              # HKDF key derivation (TLS 1.3)
rsa = "0.9"                # RSA signature verification
p256 = "0.13"              # ECDSA P-256 curve
p384 = "0.13"              # ECDSA P-384 curve
ecdsa = "0.16"             # ECDSA signatures
x509-cert = "0.2"          # X.509 certificate parsing
der = "0.7"                # DER/ASN.1 parsing

# TLS/SSL support (temporary - will be replaced by pure Graphoid TLS)
rustls = "0.23"
webpki-roots = "0.26"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

# BigNum support (Phase 1B)
num-bigint = "0.4"     # Arbitrary precision integers
num-traits = "0.2"     # Numeric trait abstractions
f128 = "0.2"           # 128-bit floats

# Optional: Performance profiling
criterion = { version = "0.5", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []
profiling = ["criterion"]

[[bin]]
name = "graphoid"
path = "src/main.rs"

[lib]
name = "graphoid"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
