[package]
name = "graphoid"
version = "0.1.0"
edition = "2021"
authors = ["Irv Kalb"]
description = "Graphoid/Glang: A graph-theoretic programming language"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
thiserror = "1.0"        # Error handling
lazy_static = "1.4"      # Global state

# Random number generation
rand = "0.8"
rand_distr = "0.4"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }

# Cryptography
sha2 = "0.10"              # SHA-256, SHA-512
sha1 = "0.10"              # SHA-1 (legacy, deprecated)
md-5 = "0.10"              # MD5 (legacy, deprecated)
blake2 = "0.10"            # BLAKE2b hashing
blake3 = "1.5"             # BLAKE3 hashing (fastest)
ed25519-dalek = "2.0"      # Ed25519 signatures
aes-gcm = "0.10"           # AES-256-GCM encryption
chacha20poly1305 = "0.10"  # ChaCha20-Poly1305 encryption
pbkdf2 = { version = "0.12", features = ["simple"] }  # PBKDF2 key derivation
argon2 = "0.5"             # Argon2 key derivation
hmac = "0.12"              # HMAC message authentication
base64 = "0.21"            # Base64 encoding
hex = "0.4"                # Hex encoding

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

# BigNum support (Phase 1B)
num-bigint = "0.4"     # Arbitrary precision integers
num-traits = "0.2"     # Numeric trait abstractions
f128 = "0.2"           # 128-bit floats

# Optional: Performance profiling
criterion = { version = "0.5", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []
profiling = ["criterion"]

[[bin]]
name = "graphoid"
path = "src/main.rs"

[lib]
name = "graphoid"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
